Fixed navbar not stretching

--- a/assets/homepage.css
+++ b/assets/homepage.css
@@ -13,6 +13,7 @@ body {
   list-style: none;
   background-color: #133f63;
   text-align: center;
+  width: 100%;
   border-radius: 10px;
   padding: 0;
   margin: 0;
